--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,94 @@
-/node_modules/
+# Dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Runtime data
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+.nyc_output/
+
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# Uploads (keep structure but ignore content)
+uploads/photos/*
+uploads/qr-codes/*
+!uploads/photos/.gitkeep
+!uploads/qr-codes/.gitkeep
+
+# Backups
+backups/*
+!backups/.gitkeep
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+*.iml
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Temporary files
+*.tmp
+*.temp
+.cache/
+
+# Docker volumes (local development)
+postgres_data/
+
+# SSL certificates (if any)
+*.pem
+*.key
+*.crt
+
+# Database dumps
+*.sql.gz
+*.sql.backup
+
+# Testing
+.coverage
+.pytest_cache/
